# swagger.json
@@ -62,6 +62,22 @@
                 }
             }
         },
+        "/api/v1/control/buzzer-alarm": {
+            "post": {
+                "tags": [
+                    "Control"
+                ],
+                "operationId": "TriggerBuzzerAlarm",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/TriggerBuzzerAlarmResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/control/fingerprint-mode": {
             "post": {
                 "tags": [
@@ -121,6 +137,14 @@
             }
         },
         "ChangePinResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "TriggerBuzzerAlarmResponse": {
             "type": "object",
             "properties": {
                 "message": {
